--- a/app/views/tasks/admin_views/_employee_list.html.erb
+++ b/app/views/tasks/admin_views/_employee_list.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: task) do |f| %>
-  <div class="container mt-3 mb-3 p-4 border border-2 rounded-3" >
+  <div class="mt-3 mb-3 p-4 border border-2 rounded-3" >
     <table class="table table-hover ">
       <thead>
         <tr>
