--- a/app/views/tasks/shared_views/_observations.html.erb
+++ b/app/views/tasks/shared_views/_observations.html.erb
@@ -32,7 +32,7 @@
     </div>
     <div class="col-6">
       <h5 class="text-center">Observaciones:</h5>
-      <div class="overflow-auto border border-1 p-1 rounded-1">
+      <div class="overflow-auto border border-1 p-1 rounded-1" style="height: 150px">
         <% @request.task_observations.each do |o| %>
           <p>[<%= o.created_at.strftime("%d/%m/%Y %I:%M %p") %>] - <%= o.user_account.name %>: <%= o.description %> </p>
         <% end %>
