--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -13,7 +13,7 @@
           Agregar feedback
         <% end %>
       <% end %>
-      <%= link_to "Regresar", root_path, class: "btn-default btn-back" %>
+      <%= link_to "Regresar", :back, class: "btn-default btn-back" %>
     </div>
   </div>
 </main>
