--- a/app/views/employees/_employee.html.erb
+++ b/app/views/employees/_employee.html.erb
@@ -1,28 +1,26 @@
 <div id="<%= dom_id employee %>">
-  <div class="container mt-3 mb-3 p-5 border border-2 rounded-3">
-    <h4 class="text-center">Información del empleado</h4>
-    <br>
-    <div>
-      <p>
-        <strong>Nombre completo:</strong>
-        <%= employee.user_account.name %>
-      </p>
-      <p>
-        <strong>Número de cédula:</strong>
-        <%= employee.employee_id_card %>
-      </p>
-      <p>
-        <strong>Email:</strong>
-        <%= employee.user_account.email %>
-      </p>
-      <p>
-        <strong>Estado:</strong>
-        <%= employee.employee_status %>
-      </p>
-      <p>
-        <strong>Sede de trabajo:</strong>
-        <%= employee.campus.name %>
-      </p>
-    </div>
+  <div class="input input-50">
+    <label for="fullname">Nombre completo</label>
+    <input type="text" id="fullname" value="<%= employee.user_account.name %>" disabled>
   </div>
-</div>
+
+  <div class="input input-50">
+    <label for="employee_id">Número de cédula</label>
+    <input type="text" id="employee_id" value="<%= employee.employee_id_card %>" disabled>
+  </div>
+
+  <div class="input input-50">
+    <label for="email">Correo electrónico</label>
+    <input type="text" id="email" value="<%= employee.user_account.email %>" disabled>
+  </div>
+
+  <div class="input input-50">
+    <label for="status">Estado</label>
+    <input type="text" id="status" value="<%= employee.employee_status %>" disabled>
+  </div>
+
+  <div class="input input-50">
+    <label for="campus">Sede de trabajo</label>
+    <input type="text" id="campus" value="<%= employee.campus.name %>" disabled>
+  </div>
+</div>  
