--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,43 +1,29 @@
 <%= form_with(model: employee) do |form| %>
-  <% if employee.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(employee.errors.count, "error") %> prohibited this employee from being saved:</h2>
-      <ul>
-        <% employee.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
-    <h4 class="text-center">Información del empleado</h4>
     <%= form.fields_for :user_account do |account| %>
-      <div class="form-group mb-3">
+      <div class="input input-50">
         <%= account.label "Nombre completo" %>
-        <%= account.text_field :name, class: "form-control" %>
+        <%= account.text_field :name, placeholder: "Nombre completo" %>
       </div>
-      <div class="form-group mb-3">
-        <%= account.label :email %>
-        <%= account.text_field :email, class: "form-control" %>
+
+      <div class="input input-50">
+        <%= account.label "Correo electrónico" %>
+        <%= account.text_field :email, placeholder: "Correo" %>
       </div>
     <% end %>
-    <div>
-      <p>
-        <%= form.label "Número de cédula", style: "display: block" %>
-        <%= form.text_field :employee_id_card, class: "form-control" %>
-      </p>
+
+    <div class="input input-50">
+        <%= form.label "Número de cédula" %>
+        <%= form.text_field :employee_id_card, placeholder: "Número de cédula" %>
     </div>
-    <div class="d-none">
-      <p>
-        <%= form.label "Tipo de empleado", style: "display: block" %>
-        <%= form.text_field :employee_type, class: "form-control" %>
-      </p>
+
+    <div class="input input-50 d-none">
+        <%= form.label "Tipo de empleado" %>
+        <%= form.text_field :employee_type, placeholder: "Tipo de empleado" %>
     </div>
-    <div>
-      <p>
-        <%= form.label "Estado del empleado", style: "display: block" %>
-      </p>
-      <div class="container mb-3">
+
+    <div class="input">
+      <%= form.label "Estado del empleado" %>
+      <div class="input-form-check">
         <div class="form-check">
           <%= form.label :employee_status, "Activo", :value => "Activo" %>
           <%= form.radio_button :employee_status, "Activo", class: "form-check-input", type: "radio" %>
@@ -48,8 +34,9 @@
         </div>
       </div>
     </div>
-    <div>
-      <%= form.submit "Añadir nuevo empleado", class: "btn btn-primary" %>
+
+    <div class="button-group form-buttons mt-5">
+        <%= form.submit "Agregar empleado", class: "btn-default btn-submit" %>
+        <%= link_to "Regresar", :back, class: "btn-default btn-back" %>
     </div>
 <% end %>
-</div>
