--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -86,7 +86,7 @@
 
       <div class="input">
         <%= form.label "Descripción" %>
-        <%= form.text_area :work_description, rows: "8" %>
+        <%= form.text_area :work_description, rows: "8", placeholder: "Agregar descripción" %>
       </div>
     </div>
 
