--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -9,8 +9,7 @@
     <div class="button-group form-buttons">
       <% if @request.feedback.nil? && @request.status == "closed"%>
         <%= link_to new_feedback_path(:request_id => @request.id), class: "btn-default btn-submit" do %>
-          <%# <i class="bi bi-clipboard2"></i> %>
-          Agregar feedback
+          Agregar retroalimentación
         <% end %>
       <% end %>
       <%= link_to "Regresar", :back, class: "btn-default btn-back" %>
