--- a/app/views/feedbacks/_form.html.erb
+++ b/app/views/feedbacks/_form.html.erb
@@ -1,55 +1,45 @@
+<div class="input input-50">
+  <label for="request-id">Número de solicitud</label>
+  <input type="text" name="request-id" id="request-id" value="S<%= @request.id %>-0<%= request.campus.campus_id%>-<%= request.created_at.strftime("%d%m%Y") %>" readonly disabled>
+</div>
+
 <%= form_with(model: feedback) do |form| %>
-  <% if feedback.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(feedback.errors.count, "error") %> prohibited this feedback from being saved:</h2>
-      <ul>
-        <% feedback.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
-    <div class="mb-3">
-      <%= form.label "Comentarios y observaciones", style: "display: block" %>
-      <%= form.text_area :observations, class: "form-control" %>
+    <div class="input input-50">
+      <%= form.label "Comentarios u observaciones" %>
+      <%= form.text_area :observations, rows: "6", placeholder: "Agregar comentario" %>
     </div>
     <div class="d-none">
       <%= form.label :request_id, style: "display: block" %>
       <%= form.hidden_field :request_id, value: @request.id, class: "form-control" %>
     </div>
-    <div class="containter">
+    <div class="input input-50">
       <%= form.label "Nivel de satisfacción", style: "display: block" %>
-      <div class="row mt-1">
-        <div class="col">
+      <div class="input-form-check">
+        <div class="form-check">
+          <%= form.label "Muy negativa"%>
           <%= form.radio_button :satisfaction, 1, :name => "satisfaction" %>
-          <label>1</label>
-          <span>Muy negativa</span>
         </div>
-        <div class="col">
+        <div class="form-check">
+          <%= form.label "Negativa"%>
           <%= form.radio_button :satisfaction, 2, :name => "satisfaction" %>
-          <label>2</label>
-          <span>Negativa</span>
         </div>
-        <div class="col">
+        <div class="form-check">
+          <%= form.label "Neutral"%>
           <%= form.radio_button :satisfaction, 3, :name => "satisfaction" %>
-          <label>3</label>
-          <span>Neutral</span>
         </div>
-        <div class="col">
+        <div class="form-check">
+          <%= form.label "Positiva"%>
           <%= form.radio_button :satisfaction, 4, :name => "satisfaction" %>
-          <label>4</label>
-          <span>Positiva</span>
         </div>
-        <div class="col">
+        <div class="form-check">
+          <%= form.label "Muy positiva"%>
           <%= form.radio_button :satisfaction, 5, :name => "satisfaction" %>
-          <label>5</label>
-          <span>Muy positiva</span>
         </div>
-      </div>
-      <div class="d-flex justify-content-center mt-5">
-        <%= form.submit "Devolver feedback", class: "btn btn-sm btn-primary" %>
       </div>
     </div>
-  </div>
+
+    <div class="button-group form-buttons pt-4">
+      <%= form.submit "Enviar", class: "btn-default btn-submit" %>
+      <%= link_to "Regresar", :back, class: "btn-default btn-back" %>
+    </div>
 <% end %>
