--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,5 +1,20 @@
-<div class="container">
-  <%= render "form", feedback: @feedback, request: @request %>
-</div>
+<main class="main">
+  <div class="container">
+    <% if @feedback.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(@feedback.errors.count, "error") %> prohibited this feedback from being saved:</h2>
+        <ul>
+          <% @feedback.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+  </div>
+  <div class="container main-form form-pad-lg bg-mandala">
+    <h1 class="mb-5 uppercase">Retroalimentación</h1>
+    <%= render "form", feedback: @feedback, request: @request %>
+  </div>
+</main>
 
 
