--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <div class="welcome-message">
         <h1>Bienvenido/a al Sistema de Solicitudes de Servicios Generales de la Sede Occidente</h1>
     </div>
-    <div class="button-group">
+    <div class="button-group align-center">
         <%= link_to new_request_path, class:"btn-default btn-light" do %>
           <%# <i class="bi bi-bookmark-plus"></i>&nbsp; %>
           Crear una nueva solicitud
