--- a/app/views/requests/ask_state.html.erb
+++ b/app/views/requests/ask_state.html.erb
@@ -1,6 +1,6 @@
 <main class="main">
   <div class="container main-form form-pad-lg bg-mandala">
-    <h1 class="mb-5">Consultar estado de solicitud</h1>
+    <h1 class="mb-5 uppercase">Consultar estado de solicitud</h1>
 
     <%= form_with(scope: :session, url: ask_state_path, local: true) do |form| %>
       <div class="input input-50">
