Se factoriza el código. Así como se refactoriza el espaciado del mismo

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,5 +1,5 @@
 <%= render @request %>
-<div class="container mt-3 mb-3 ">
+<div class="mt-3 mb-3 ">
   <div class="position-relative mt-3">
     <% if !current_user_account %>
       <div class="d-flex justify-content-center">
@@ -17,17 +17,14 @@
         </div>
       </div>
     <% else %>
+      <% if current_user_account.role == "admin" %>
+        <%= render 'requests/admin_views/request_log' %>
+      <% end %>
       <div class="d-flex justify-content-center">
         <div class="btn-group">
           <%= link_to requests_path, class: "btn btn-primary" do %>
             <i class="bi bi-arrow-bar-left"></i>
             Volver
-          <% end %>
-          <% if current_user_account.role == "admin" %>
-            <%= link_to log_entries_path(:request_id => @request.id), class: "btn btn-primary" do %>
-              <i class="bi bi-clipboard2"></i>
-              Ver historial de cambios
-            <% end %>
           <% end %>
         </div>
       </div>
