Se realizan cambios para el mailer de Devise.

--- a/app/views/user_accounts/mailer/confirmation_instructions.html.erb
+++ b/app/views/user_accounts/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,7 @@
-<p>Welcome <%= @email %>!</p>
+<p>Bienvenido <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>Se le ha resgistrado en el sistema solicitudes de Servicios Generales.</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>Para confirmar su cuenta, por favor haga click en el siguiente enlace:</p>
+
+<p><%= link_to 'Confirmar mi cuenta', confirmation_url(@resource, confirmation_token: @token) %></p>
