--- a/app/views/user_accounts/registrations/new.html.erb
+++ b/app/views/user_accounts/registrations/new.html.erb
@@ -3,22 +3,34 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "user_accounts/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br/>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="form-group mb-3">
+    <%= f.label :email %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br/>
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="form-group mb-3">
+    <%= f.label "Nombre completo" %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br/>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group mb-3">
+    <p>
+      <%= f.label "Número de cédula", style: "display: block" %>
+      <%= f.text_field :id_card, class: "form-control" %>
+    </p>
+  </div>
+  <div>
+    <p>
+      <%= f.label "Estado del empleado", style: "display: block" %>
+    </p>
+    <div class="container mb-3">
+      <div class="form-check">
+        <%= f.label :status, "Activo", :value => "active" %>
+        <%= f.radio_button :status, "Activo", class: "form-check-input", type: "radio" %>
+      </div>
+      <div class="form-check">
+        <%= f.label :status, "Inactivo", :value => "inactive" %>
+        <%= f.radio_button :status, "Inactivo", class: "form-check-input", type: "radio", :checked => true %>
+      </div>
+    </div>
   </div>
 
   <div class="actions">
